--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <h1>Welcome to Really Rare House</h1>
     <p>Digital experiments and interactive oddities</p>
     <a href="haunted-camera.html">Ghost AR Thing</a>
-    <a href="dancingdata.html">Dancing Data People</a>
+    <a href="dancing-data.html">Dancing Data People</a>
 </body>
 </html>
